tests/baselines/reference/collisionArgumentsInType(strict=true).errors.txt
collisionArgumentsInType.ts(1,21): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(1,24): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(2,11): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(2,30): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(4,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInType.ts(4,6): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(4,25): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(5,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInType.ts(5,10): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(5,29): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(6,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInType.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(6,28): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(7,12): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(7,31): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(10,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInType.ts(10,17): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(10,20): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(11,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInType.ts(11,21): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(11,24): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(12,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInType.ts(12,20): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(12,23): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInType.ts(13,23): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInType.ts(13,26): error TS1100: Invalid use of 'arguments' in strict mode.


==== collisionArgumentsInType.ts (26 errors) ====
    var v1: (i: number, ...arguments) => void; // no error - no code gen
                        ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                           ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    var v12: (arguments: number, ...restParameters) => void; // no error - no code gen
              ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                 ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
    var v2: {
        (arguments: number, ...restParameters); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
         ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                            ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        new (arguments: number, ...restParameters); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        foo(arguments: number, ...restParameters); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                               ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        prop: (arguments: number, ...restParameters) => void; // no error - no code gen
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                  ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
    }
    var v21: {
        (i: number, ...arguments); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
                    ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        new (i: number, ...arguments); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
                        ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                           ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        foo(i: number, ...arguments); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                       ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                          ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        prop: (i: number, ...arguments) => void; // no error - no code gen
                          ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }